--- a/fbed/Makefile.loc
+++ b/fbed/Makefile.loc
@@ -8,7 +8,9 @@
 
 # Make null for default, or specify -p or -pg for profiling
 PROFILE		=
-CONFIGDEFS	= -I.
+CONFIGDEFS	= -D_LOCAL_=static
+LIBES		= ${LIBFB} ${LIBTERMIO} ${LIBCURSOR} ${LIBTERMLIB} -lm\
+		${LIBSYSV}
 
 PRODUCTS	= fbed
 SRCDIR		= fbed
@@ -20,20 +22,19 @@ CFILES		= ${PRODUCTS}.c char.c sgi_dep.c \
 		empty.c execshell.c getfont.c\
 		getinput.c glob.c fill_buf.c \
 		pos_pad.c prnt.c \
-		squash.c try.c libcursor.c
+		squash.c try.c
 
 OBJS		= ${PRODUCTS}.o char.o sgi_dep.o \
 		empty.o execshell.o getfont.o \
 		getinput.o glob.o fill_buf.o \
 		pos_pad.o prnt.o \
-		squash.o try.o libcursor.o
+		squash.o try.o
 
 all:		${PRODUCTS}
 
 fbed:	${OBJS}
-	$(CC) ${CFLAGS} -o $@ ${OBJS} \
-		${LIBSYSV} ${LIBFB} ${LIBTERMIO} -ltermlib ${LIBES} 
-	touch $@
+	$(CC) ${CFLAGS} -o $@ ${OBJS} ${LIBES}
+#	touch $@
 # DO NOT DELETE THIS LINE -- make depend uses it
 fbed.o: fbed.c
 fbed.o: extern.h
@@ -62,7 +63,6 @@ prnt.o: extern.h
 squash.o: squash.c
 try.o: try.c
 try.o: extern.h
-libcursor.o: libcursor.c
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
 # see make depend above
