Changed from $? to $< for SUN 3.4

--- a/pix/Makefile.dist
+++ b/pix/Makefile.dist
@@ -5,7 +5,7 @@
 
 .SUFFIXES: .pix .p_asc
 
-.p_asc.pix: ; $(A2P) < $? > $@
+.p_asc.pix: ; $(A2P) < $< > $@
 
 A2P=../conv/asc2pix
 P2A=../conv/pix2asc
