Added Apollo note

--- a/cake/Makefile
+++ b/cake/Makefile
@@ -5,6 +5,7 @@ SHELL=/bin/sh
 
 # -DATT for SystemV, -DBSD for Berkeley, done by machinetype.sh
 #
+# For Apollo, may need to add -Tbsd4.3
 COPTS = -DCAKEDEBUG -DYYDEBUG -DCAREFUL -D`machinetype.sh -a`
 
 BINDIR=/usr/brlcad/bin
